changed the style of signup and login forms

--- a/public/login.html
+++ b/public/login.html
@@ -16,16 +16,14 @@
             <h1>EXPENSE TRACKER</h1>
         </div>
         <div class="form-container">
-            <h2>Create New Account</h2>
-            <p>Already A Member?<a href="login.html">Log In</a></p>
+            <h2>Log Into Your Account</h2>
+            <p>Not A Member Yet?<a href="signup.html">Sign Up</a></p>
             <form action="">
-                <label for="username"></label>
-                <input type="text" name="username" id="username" placeholder="Username" required>
                 <label for="email"></label>
                 <input type="email" name="email" id="email" placeholder="Email" required>
                 <label for="password"></label>
                 <input type="password" name="password" id="password" placeholder="Password" required>
-                <button id="signup-btn" type="submit">SIGN UP</button>
+                <button id="login-btn" type="submit">LOG IN</button>
             </form>
         </div>
     </main>
