added login page and login functionality

--- a/public/login.html
+++ b/public/login.html
@@ -28,7 +28,7 @@
         </div>
     </main>
 </body>
-<script src="signup.js"></script>
+<script src="login.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
 
 </html>
