added the premium leaderboard feature

--- a/public/expenses.html
+++ b/public/expenses.html
@@ -36,6 +36,13 @@
             </form>
         </div>
         <ul id="expense-list"></ul>
+        <div id="leaderboard-container">
+            <div>
+                <h1>LEADERBOARD</h1>
+                <button id="leaderboard-close-btn">&times;</button>
+            </div>
+            <ul id="leaderboard-list"></ul>
+        </div>
     </main>
 </body>
 <script src="expenses.js"></script>
