added the download file button

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
             </form>
         </div>
         <ul id="expense-list"></ul>
+        <div id="download-container">
+            <button id="download-btn">Download Expenses So Far</button>
+        </div>
         <div id="leaderboard-container">
             <div>
                 <h1>LEADERBOARD</h1>
