--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="forms.css">
-    <link rel="stylesheet" href="expenses.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
 </head>
 
 <body>
     <main id="expense-page-main">
         <div class="premium-container">
-            <h1 id="user"><span id="user-name"></span>'s Expenses</h1>
+            <h1><span id="user-name"></span>'s Expenses <span id="premium-user">(Premium User)</span></h1>
             <button id="buy-premium-btn" type="submit">Buy Premium</button>
+            <button id="leaderboard-btn">Show Leaderboard</button>
         </div>
         <div class="form-container">
             <form id="expense-form">
@@ -48,7 +49,7 @@
         </div>
     </main>
 </body>
-<script src="expenses.js"></script>
+<script src="index.js"></script>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
 
