stored the files downloaded by the user in the database and displayed download history on the frontend

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,14 @@
         <ul id="expense-list"></ul>
         <div id="download-container">
             <button id="download-btn">Download Expenses So Far</button>
+            <button id="download-history-btn">Download History</button>
+        </div>
+        <div id="download-history-container">
+            <div>
+                <h1>DOWNLOAD HISTORY</h1>
+                <button id="download-history-close-btn">&times;</button>
+            </div>
+            <ul id="download-history-list"></ul>
         </div>
         <div id="leaderboard-container">
             <div>
