added pagination logic

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
             </form>
         </div>
         <ul id="expense-list"></ul>
+        <div id="pagination-container"></div>
         <div id="download-container">
             <button id="download-btn">Download Expenses So Far</button>
             <button id="download-history-btn">Download History</button>
